Refactoring CI/CD workflow (#2)
* CI: divided workflow into ci.yml and deploy.yml

* CI/CD:refactoring

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy on main push
 
 on:
   workflow_run:
-    workflows: ["Java CI/CD with Maven and Docker"]
+    workflows: ["Java CI with Maven"]
     types:
       - completed
 
