CI/CD: bugfix and test working

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Java CI with Maven
 
 on:  # это когда будет запускаться jobs
   push:
-    branches: [ "develop", "feature/*" ]
+    branches: [ "develop", "feature/*" , "main" ]
   pull_request:
     branches: [ "main" ]
 
