--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,14 +1,40 @@
-name: Deploy on main push
+name: CI/CD my project
 
 on:
-  workflow_run:
-    workflows: ["Java CI with Maven"]
-    types:
-      - completed
+  push:
+    branches: [ "develop", "feature/*" , "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  deploy:  # CD job — пуш Docker и деплой
-    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'main' }}
+  CI: # имя
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code   #скачивает код
+        uses: actions/checkout@v4
+
+      - name: Make mvnw executable
+        run: chmod +x ./mvnw
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Build jar and test
+        run: ./mvnw clean install
+
+      - name: Archive JAR for deploy job # сохранили в github actions
+        uses: actions/upload-artifact@v4
+        with:
+          name: eduka-jar
+          path: target/eduka-0.0.1-SNAPSHOT.jar
+
+  CD:
+    needs: CI                               # запускается после CI
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
 
     steps:
@@ -44,3 +70,5 @@ jobs:
       #       docker stop eduka || true
       #       docker rm eduka || true
       #       docker run -d --name eduka -p 8080:8080 evgenn4ke/eduka:latest
+
+
